---------------------------------------------------------------------------------------------------
Version: 0.69.108
Date: ????
  Changes:
    - I refactored the technology hiding system to allow other mods to change prerequisites of Rubia technologies. You won't notice anything different, but this futureproofs Rubia techs against softlocks from external interference.
---------------------------------------------------------------------------------------------------
Version: 0.69.107
Date: 2025-08-24
  Changes:
    - Fix crash on load when you have a mod with huge asteroids with no resistances.
---------------------------------------------------------------------------------------------------
Version: 0.69.106
Date: 2025-08-24
  Changes:
    - NEW KINETIC DAMAGE TYPE: Changed the resistances again so that sniper turrets (and misc physical stuff) cannot harm huge asteroids. This should only affect people trying to do promethium with really cheesey strats that are clearly unintended. PLEASE let me know if this messes with another mod (especially if it would mess with gathering promethium). Thanks to Praxi for reporting it! The change:
      ► Railguns now do "Kinetic" type damage to huge asteroids.
      ► Huge asteroids are 100% immune to physical. Their old physical resistance is now Kinetic-type resistance.
      ► ALL other entities in the game (except those that would be OHKO'd by railguns anyway) have had a copy of their phys resistance copied over as kinetic damage resistance.
    - Landing logic tuned for dropping with items. Bugfix thanks to a report by Praxi. :)
    - Fixed a bug where tips and tricks items did not get highlighted if you didn't scroll through the whole Rubia planet briefing. Very sorry to everyone affected.
---------------------------------------------------------------------------------------------------
Version: 0.69.105
Date: 2025-08-23
  Changes:
    - Context: Lots of minor tweaks from watching Splee play Rubia.